--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
     <string name="app_name">Run Tracker App</string>
-    <string name="google_maps_api_key" templateMergeStrategy="preserve" translatable="false">Enter_Your_Api_key</string>
+    <string name="google_maps_api_key" templateMergeStrategy="preserve" translatable="false">AIzaSyDy0LWYZ9aQevnvccWfKEivPqmgWxw0PnE</string>
     <string-array name="filter_options">
         <item>Date</item>
         <item>Running Time</item>
